Feat: added themoviedb api

--- a/Avaliações/Trabalhos/CRUD/flask/templates/index.html
+++ b/Avaliações/Trabalhos/CRUD/flask/templates/index.html
@@ -42,6 +42,10 @@
         </form>
     {% endif %}
 
+    <form action="/movies" method="GET">
+        <button type="submit">Filmes</button>
+    </form>
+
     <div>
         <h2>Lista de usuários</h2>
         <ul>
